<resources>
    <string name="app_name">Tarjeta bip  Completa</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="ingresa_numero_de_bip">ingresa numero de bip</string>
    <string name="saldo">saldo</string>
    <string name="enviar_consulta">enviar consulta</string>
    <string name="saldo_disponible">Saldo Disponible :</string>
    <string name="atenci_n_telef_nica_600_730_00_73_800_73_00_73">Atención Telefónica

        600 730 00 73 - 800 73 00 73</string>
    <string name="ingresar_n_de_bip">Ingresar N° de Bip</string>
    <string name="conoce_el_saldo_de_tu_tarjeta">Conoce El Saldo de Tu Tarjeta</string>
    <string name="red_metropolitana_de_transportes">RED METROPOLITANA DE TRANSPORTES</string>
    <string name="publicidad">Publicidad</string>
    <string name="n_de_tarjeta_bip">N° de tarjeta bip! : 12345677 </string>
    <string name="estado_de_la_tarjeta">Estado De la Tarjeta : Activo o inactivo</string>
    <string name="fecha_de_consulta">Fecha de Consulta : 12/12/2012</string>
    <string name="saldo_de_tu_cardbip">Saldo de tu CardBip! : $ 2.000 </string>
    <string name="_24327200">24327200</string>
    <string name="carga_tu_bip_online">Carga tu Bip! online</string>
    <string name="_1_2_1_5_7_9_3_3">N° 1 2 1 5 7 9 3 3</string>
    <string name="consulta_tu_saldo">CONSULTA TU SALDO</string>
</resources>